--- a/style.css
+++ b/style.css
@@ -9,9 +9,10 @@ html {
     font-size: 16px;
     margin-top: 3em;
 }
-header,
-main,
-footer {
+h1, h2, h3 {
+    color: #666;
+}
+header, main, footer {
     max-width: 800px;
     margin: 0 auto;
 }
@@ -22,7 +23,7 @@ header h1 {
     font-size: 3em;
 }
 header span {
-    font-size: 1.5;
+    font-size: 1.5em;
     color: #999
 }
 nav {
@@ -42,4 +43,12 @@ nav a {
 }
 nav a:hover{
     background: #666;
+}
+section {
+    margin: 1em 0;
+    padding-top: 3em;
+    min-height: 20em;
+}
+section > p {
+    margin: 1em 0;
 }
