Added style CSS to the Footer

--- a/style.css
+++ b/style.css
@@ -52,3 +52,11 @@ section {
 section > p {
     margin: 1em 0;
 }
+footer {
+    margin-top: 2em;
+    margin-bottom: 1em;
+    background: #666;
+    color: #fff;
+    padding: 1em 0;
+    text-align: center;
+}
