--- a/style.css
+++ b/style.css
@@ -52,6 +52,13 @@ section {
 section > p {
     margin: 1em 0;
 }
+section ul {
+    padding-left: 1.5em;
+}
+#projects {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
 footer {
     margin-top: 2em;
     margin-bottom: 1em;
@@ -60,3 +67,4 @@ footer {
     padding: 1em 0;
     text-align: center;
 }
+
