More footer work

--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ section ul {
 #projects {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
 }
 footer {
     margin-top: 2em;
