--- a/style.css
+++ b/style.css
@@ -34,7 +34,8 @@ nav {
     display: flex;
     flex-flow: row;
     justify-content: center;
-    background: #333;
+    background: #333; opacity:0.6;
+    font-weight: bold;
 }
 nav a {
     color: #fff;
