--- a/css/styles.css
+++ b/css/styles.css
@@ -74,5 +74,28 @@ img{
 .center {
     margin-left: auto;
     margin-right: auto;
-
   }
+.contactForm{
+    border: white;
+    position: relative;
+    text-align: center;
+    border-style: solid;
+    border-width: 5px;
+    display: inline-block;
+    border-radius: 8px;
+}
+.Sendbtn{
+    border-radius: 20px;
+    background-color: white;
+    color: black;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: large;
+    font-family: 'Roboto', sans-serif;
+}
+.Sendbtn:hover{
+    background-color: rgb(25, 212, 25);
+    color: black;
+    cursor: pointer;
+    font-family: 'Roboto', sans-serif;
+}
