--- a/css/styles.css
+++ b/css/styles.css
@@ -1,35 +1,18 @@
-html {
+html{
 	font-family: 'Roboto', sans-serif;
 }
 
-@media (min-width: 576px) {
-	html {
-		font-size: 14px;
-	}
-}
-
-@media (min-width: 768px) {
-	html {
-		font-size: 16px;
-	}
-}
-
-@media (min-width: 992px) {
+@media (min-width: 992px){
 	html {
 		font-size: 18px;
 	}
 }
 
-@media (min-width: 1200px) {
-	html {
-		font-size: 20px;
-	}
-}
-.icons-social i {
+.icons-social i{
 	font-size: 3em;
 }
 
-main {
+main{
 	display: flex;
 	flex-direction: column;
 	min-height: 96vh;
@@ -38,19 +21,19 @@ main {
 	text-align: center;
 }
 
-main > .intro {
+main > .intro{
 	font-family: 'Reem Kufi', sans-serif;
 	font-size: 3.75em;
 	font-weight: 600;
 }
 
-main > .tagline {
+main > .tagline{
 	font-size: 1.5rem;
 	margin: 1.5rem 0;
 	font-weight: 100;
 }
 
-.icons-social i {
+.icons-social i{
 	padding: 10px;
 }
 
@@ -64,6 +47,7 @@ main > .tagline {
 	width: 2.65rem;
 	height: 2.65rem;
 }
+
 img{
     width: 90px;
     border: 1px solid #333;
@@ -71,19 +55,23 @@ img{
     border-radius: 8px;
     opacity: 0.7;
 }
-.center {
+
+.center{
     margin-left: auto;
     margin-right: auto;
-  }
+}
+
 .contactForm{
     border: white;
     position: relative;
     text-align: center;
     border-style: solid;
-    border-width: 5px;
+    border-width: 1px;
     display: inline-block;
     border-radius: 8px;
+    background-color: rgb(37, 35, 35);
 }
+
 .Sendbtn{
     border-radius: 20px;
     background-color: white;
@@ -93,9 +81,81 @@ img{
     font-size: large;
     font-family: 'Roboto', sans-serif;
 }
+
 .Sendbtn:hover{
     background-color: rgb(25, 212, 25);
     color: black;
     cursor: pointer;
     font-family: 'Roboto', sans-serif;
 }
+
+.project1{
+    border: white;
+    position: relative;
+    text-align: center;
+    border-style: solid;
+    border-width: 1px;
+    display: inline-block;
+    border-radius: 8px;
+    background-color: rgb(37, 35, 35);
+    padding: 10px;
+    transition: transform .2s;
+    width: 200px;
+    height: 200px;
+    margin: 0 auto;
+    cursor: pointer;
+}
+
+.project1:hover{
+    -ms-transform: scale(1.5);
+    -webkit-transform: scale(1.5);
+    transform: scale(1.5);
+}
+
+.project2{
+    border: white;
+    position: relative;
+    text-align: center;
+    border-style: solid;
+    border-width: 1px;
+    display: inline-block;
+    border-radius: 8px;
+    background-color: rgb(37, 35, 35);
+    padding: 10px;
+    transition: transform .2s;
+    width: 200px;
+    height: 200px;
+    margin: 0 auto;
+    cursor: pointer;
+}
+
+.project2:hover{
+    -ms-transform: scale(1.5);
+    -webkit-transform: scale(1.5);
+    transform: scale(1.5);
+}
+
+.project3{
+    border: white;
+    position: relative;
+    text-align: center;
+    border-style: solid;
+    border-width: 1px;
+    display: inline-block;
+    border-radius: 8px;
+    background-color: rgb(37, 35, 35);
+    padding: 10px;
+    transition: transform .2s;
+    width: 200px;
+    height: 200px;
+    margin: 0 auto;
+    cursor: pointer;
+}
+
+.project3:hover{
+    -ms-transform: scale(1.5);
+    -webkit-transform: scale(1.5);
+    transform: scale(1.5);
+}
+
+
