--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 html{
-	font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
-@media (min-width: 992px){
+@media (width: auto){
 	html {
 		font-size: 18px;
 	}
@@ -18,7 +18,7 @@ main{
 	min-height: 96vh;
 	justify-content: center;
 	padding: 0 30px;
-	text-align: center;
+    text-align: center;
 }
 
 main > .intro{
@@ -46,19 +46,6 @@ main > .tagline{
 	margin-left: 0.675rem;;
 	width: 2.65rem;
 	height: 2.65rem;
-}
-
-img{
-    width: 90px;
-    border: 1px solid #333;
-    box-shadow: 2px 2px #333;
-    border-radius: 8px;
-    opacity: 0.7;
-}
-
-.center{
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .contactForm{
@@ -89,17 +76,24 @@ img{
     font-family: 'Roboto', sans-serif;
 }
 
+#projects{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-row: inherit;
+    grid-column-gap: 1em;
+
+}
+
+
 .project1{
     border: white;
-    position: relative;
     text-align: center;
     border-style: solid;
     border-width: 1px;
-    display: inline-block;
-    border-radius: 8px;
+    border-radius: 5px;
     background-color: rgb(37, 35, 35);
-    padding: 10px;
-    transition: transform .2s;
+    padding: 5px;
+    transition: transform .4s;
     width: 200px;
     height: 200px;
     margin: 0 auto;
@@ -107,22 +101,18 @@ img{
 }
 
 .project1:hover{
-    -ms-transform: scale(1.5);
-    -webkit-transform: scale(1.5);
-    transform: scale(1.5);
+    transform: scale(1.2);
 }
 
 .project2{
     border: white;
-    position: relative;
     text-align: center;
     border-style: solid;
     border-width: 1px;
-    display: inline-block;
     border-radius: 8px;
     background-color: rgb(37, 35, 35);
-    padding: 10px;
-    transition: transform .2s;
+    padding: 5px;
+    transition: transform .4s;
     width: 200px;
     height: 200px;
     margin: 0 auto;
@@ -130,22 +120,18 @@ img{
 }
 
 .project2:hover{
-    -ms-transform: scale(1.5);
-    -webkit-transform: scale(1.5);
-    transform: scale(1.5);
+    transform: scale(1.2);
 }
 
 .project3{
     border: white;
-    position: relative;
     text-align: center;
     border-style: solid;
     border-width: 1px;
-    display: inline-block;
     border-radius: 8px;
     background-color: rgb(37, 35, 35);
-    padding: 10px;
-    transition: transform .2s;
+    padding: 5px;
+    transition: transform .4s;
     width: 200px;
     height: 200px;
     margin: 0 auto;
@@ -153,9 +139,7 @@ img{
 }
 
 .project3:hover{
-    -ms-transform: scale(1.5);
-    -webkit-transform: scale(1.5);
-    transform: scale(1.5);
+    transform: scale(1.2);
 }
 
 
