--- a/css/theme.css
+++ b/css/theme.css
@@ -1,7 +1,6 @@
 main{
-    background: #050505;
-    background-size: auto;
-	color: white;
+    background-color: #050505;
+    color: white;
 }
 .icons-social a{
 	color: white;
