--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ html{
     font-family: 'Roboto', sans-serif;
 }
 
-@media (width: auto){
+@media (width: 100%){
 	html {
 		font-size: 18px;
 	}
@@ -77,23 +77,18 @@ main > .tagline{
 }
 
 #projects{
-    display: grid;
+    display: flex;
     grid-template-columns: repeat(3, 1fr);
     grid-row: inherit;
     grid-column-gap: 1em;
-
+    float: center;
 }
 
-
 .project1{
-    border: white;
     text-align: center;
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 5px;
     background-color: rgb(37, 35, 35);
     padding: 5px;
-    transition: transform .4s;
+    transition: transform .3s;
     width: 200px;
     height: 200px;
     margin: 0 auto;
@@ -105,14 +100,10 @@ main > .tagline{
 }
 
 .project2{
-    border: white;
     text-align: center;
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 8px;
     background-color: rgb(37, 35, 35);
     padding: 5px;
-    transition: transform .4s;
+    transition: transform .3s;
     width: 200px;
     height: 200px;
     margin: 0 auto;
@@ -124,14 +115,10 @@ main > .tagline{
 }
 
 .project3{
-    border: white;
     text-align: center;
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 8px;
     background-color: rgb(37, 35, 35);
     padding: 5px;
-    transition: transform .4s;
+    transition: transform .3s;
     width: 200px;
     height: 200px;
     margin: 0 auto;
